--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main{
   .container{
     display: flex;
     flex-direction: column;
-    background: rgba(150, 83, 7, 0.342);
+    background: rgba(0, 0, 0, 0.822);
     width: 400px;
     height: 600px;
     align-items: center;
@@ -26,8 +26,9 @@ main{
     width: 100%;
     height: 50px;
     font: bold 2.5rem serif;
-    border-bottom: solid 5px black;
+    border-bottom: solid 5px rgb(0, 0, 0);
     margin-bottom: 20px;
+    color: white
   }
   
   .input {
@@ -36,6 +37,7 @@ main{
     height: 50px;
     justify-content: space-between;
     align-items: center;
+    color: white;
   }
   .input input {
     width: 200px;
@@ -55,8 +57,8 @@ main{
     width: 300px;
     height: 40px;
     font: bold 1.2rem serif;
-    background: #000;
-    color: rgb(255, 255, 255);
+    background: #da8627ec;
+    color: rgb(0, 0, 0);
     outline: none;
     border-radius: 5px;
     cursor: pointer;
@@ -70,9 +72,8 @@ main{
     height: 150px;
     border-radius: 5px;
     font: italic 1.5rem serif;
-    box-shadow: 0px 0px 10px black;
-    background: #000;
-    color: rgb(255, 255, 255);
+    background: #ffffff;
+    color: rgb(0, 0, 0);
     padding: 20px;
     box-sizing: border-box;
     user-select: none;
